<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="106dp"
        android:text="@string/Textlogin"
        android:textColor="#FFC107"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="106dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="106dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <Button
        android:id="@+id/Login"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="94dp"
        android:text="@string/login"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/Registrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/Registrazione"
        android:layout_width="188dp"
        android:layout_height="58dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="105dp"
        android:text="@string/registrazione"
        app:backgroundTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

</androidx.constraintlayout.widget.ConstraintLayout>